# robotframework-stopwatch

./: .gitignore  README.md  Stopwatch.py  StopwatchListener.py  pyproject.toml  requirements.txt  robot_history.json  suite_example.robot
src/Stopwatch/: StopwatchListener.py  __init__.py  stopwatch.py
src/robot/stopwatch/: StopwatchListener.py  __init__.py
